new themes added

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import url('./white-black-theme/black-white-theme.css');
 
 * {
-    font-family: Maple Mono, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: "0xProto", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 13px;
 }
 
