--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import url('./white-black-theme/black-white-theme.css');
 
 * {
-    font-family: "0xProto", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: "Google Sans Code", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 13px;
 }
 
@@ -114,7 +114,7 @@ button:hover {
 #scratchpad,
 #mpd {
     padding: 0 10px;
-    color: #ffffff;
+    color: #000000;
 }
 #window,
 
@@ -168,10 +168,10 @@ label:focus {
 }
 
 #backlight {
-    background-color: #90b1b1;
+    background-color: transparent;
 }
 
-#network {
+#network{
     color: @color1;
 }
 
@@ -180,8 +180,8 @@ label:focus {
 }
 
 #pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
+    background-color: transparent;
+    color: @color1;
 }
 
 #wireplumber {
