--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
-@import url('/home/zoly/.config/hellwal/generated/waybar-colors.css');
+@import url('/home/zoly/.cache/wal/colors-waybar.css');
 
 * {
-    font-family: "TT Norms Pro Mono", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: "Maple Mono", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 13px;
 }
 
