--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import url('/home/zoly/.cache/wal/colors-waybar.css');
 
 * {
-    font-family: "Maple Mono", "Miracode",  FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: "Annotation Mono","Maple Mono", "Miracode",  FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 13px;
 }
 
